[project]
name = "advance-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "faiss-cpu>=1.10.0",
    "langchain>=0.3.21",
    "langchain-community>=0.3.20",
    "langchain-core>=0.3.47",
    "langchain-groq>=0.3.1",
    "langchain-openai>=0.3.9",
    "langgraph>=0.3.18",
    "streamlit>=1.43.2",
]
